--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
       <section id="projects" class="projects-section">
         <h2 class="projects-section-header">These are some of my projects</h2>
         <div class="projects-grid">
-        <a href="https://codepen.io/Tatendaishe-Muzama/pen/OJENRGY" target="_blank" class="project project-tile">
+        <a href="https://geniusmuzama.github.io/Nelson-Mandela-tribute-page/" target="_blank" class="project project-tile">
           <img class="project-image" src="" alt="project">
             <span class="code"><</span>
             Tribute Page
             <span class="code">/></span>
           </p>
         </a>
-        <a href="https://codepen.io/Tatendaishe-Muzama/pen/WNyxvZr" target="_blank" class="project project-tile">
+        <a href="https://geniusmuzama.github.io/anime-technical-documentation.com/" target="_blank" class="project project-tile">
           <img class="project-image" src="" alt="project">
           <p class="project-title">
             <span class="code">&lt;</span>
@@ -45,7 +45,7 @@
             <span class="code">/&gt;</span>
           </p>
         </a>
-        <a href="https://codepen.io/Tatendaishe-Muzama/pen/wvXWaYM" target="_blank" class="project project-tile">
+        <a href="https://geniusmuzama.github.io/AI-Intergration-Survey.com/" target="_blank" class="project project-tile">
           <img class="project-image" src="" alt="project">
           <p class="project-title">
             <span class="code">&lt;</span>
@@ -53,8 +53,16 @@
             <span class="code">/&gt;</span>
           </p>
         </a>
+          <a href="https://geniusmuzama.github.io/durag-company.com/" target="_blank" class="project project-tile">
+          <img class="project-image" src="" alt="project">
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            The Durag Company product landing page
+            <span class="code">/&gt;</span>
+          </p>
+        </a>
       </div>
-      <a href="https://codepen.io/FreeCodeCamp/" class="btn btn-show-all" target="_blank">Show all<i class="fas fa-chevron-right"></i></a>
+      <a href="https://github.com/GeniusMuzama" class="btn btn-show-all" target="_blank">Show all<i class="fas fa-chevron-right"></i></a>
       </section>
       <section id="contact" class="contact-section">
       <div class="contact-section-header">
