--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <img class="project-image" src="" alt="project">
           <p class="project-title">
             <span class="code">&lt;</span>
-            The Durag Company product landing page
+            The Durag Company product page
             <span class="code">/&gt;</span>
           </p>
         </a>
