--- a/index.html
+++ b/index.html
@@ -31,33 +31,25 @@
         <h2 class="projects-section-header">These are some of my projects</h2>
         <div class="projects-grid">
         <a href="https://geniusmuzama.github.io/Nelson-Mandela-tribute-page/" target="_blank" class="project project-tile">
-          <img class="project-image" src="" alt="project">
+          <img class="project-image" src="https://i.ibb.co/ZKVQbJy/2022-11-04-2.png" alt="project">
             <span class="code"><</span>
             Tribute Page
             <span class="code">/></span>
           </p>
         </a>
         <a href="https://geniusmuzama.github.io/anime-technical-documentation.com/" target="_blank" class="project project-tile">
-          <img class="project-image" src="" alt="project">
+          <img class="project-image" src="https://i.ibb.co/rZy8Vdd/2022-11-14-1.png" alt="project">
           <p class="project-title">
             <span class="code">&lt;</span>
             Anime Technical Documentation
             <span class="code">/&gt;</span>
           </p>
         </a>
-        <a href="https://geniusmuzama.github.io/AI-Intergration-Survey.com/" target="_blank" class="project project-tile">
-          <img class="project-image" src="" alt="project">
+        <a href="https://geniusmuzama.github.io/durag-company.com/" target="_blank" class="project project-tile">
+          <img class="project-image" src="https://i.ibb.co/Jr8HDkw/2022-11-14-3.png" alt="project">
           <p class="project-title">
             <span class="code">&lt;</span>
-            AI Survey Form
-            <span class="code">/&gt;</span>
-          </p>
-        </a>
-          <a href="https://geniusmuzama.github.io/durag-company.com/" target="_blank" class="project project-tile">
-          <img class="project-image" src="" alt="project">
-          <p class="project-title">
-            <span class="code">&lt;</span>
-            The Durag Company product page
+            Durag Company product page
             <span class="code">/&gt;</span>
           </p>
         </a>
