--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <h2 class="projects-section-header">These are some of my projects</h2>
         <div class="projects-grid">
         <a href="https://geniusmuzama.github.io/Nelson-Mandela-tribute-page/" target="_blank" class="project project-tile">
-          <img class="project-image" src="https://i.ibb.co/ZKVQbJy/2022-11-04-2.png" alt="project">
+          <img class="project-image" src="https://i.ibb.co/QYXxvhs/2022-11-04-2.png" alt="project">
             <span class="code"><</span>
             Tribute Page
             <span class="code">/></span>
           </p>
         </a>
         <a href="https://geniusmuzama.github.io/anime-technical-documentation.com/" target="_blank" class="project project-tile">
-          <img class="project-image" src="https://i.ibb.co/rZy8Vdd/2022-11-14-1.png" alt="project">
+          <img class="project-image" src="https://i.ibb.co/rmsnBKf/2022-11-14-1.png" alt="project">
           <p class="project-title">
             <span class="code">&lt;</span>
             Anime Technical Documentation
@@ -46,7 +46,7 @@
           </p>
         </a>
         <a href="https://geniusmuzama.github.io/durag-company.com/" target="_blank" class="project project-tile">
-          <img class="project-image" src="https://i.ibb.co/Jr8HDkw/2022-11-14-3.png" alt="project">
+          <img class="project-image" src="https://i.ibb.co/qyGCLt4/2022-11-14-3.png" alt="project">
           <p class="project-title">
             <span class="code">&lt;</span>
             Durag Company product page
