--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
       <section id="projects" class="projects-section">
         <h2 class="projects-section-header">These are some of my projects</h2>
         <div class="projects-grid">
-        <a href="https://geniusmuzama.github.io/Nelson-Mandela-tribute-page/" target="_blank" class="project project-tile">
+        <a href="https://st10027393.github.io/Nelson-Mandela-tribute-page/" target="_blank" class="project project-tile">
           <img class="project-image" src="https://i.ibb.co/9qy8t1c/2022-11-04-2.png" alt="project">
             <span class="code"><</span>
             Tribute Page
             <span class="code">/></span>
           </p>
         </a>
-        <a href="https://geniusmuzama.github.io/anime-technical-documentation.com/" target="_blank" class="project project-tile">
+        <a href="https://st10027393.github.io/anime-technical-documentation.com/" target="_blank" class="project project-tile">
           <img class="project-image" src="https://i.ibb.co/qFkmJ8M/2022-11-14-1.png" alt="project">
           <p class="project-title">
             <span class="code">&lt;</span>
@@ -45,7 +45,7 @@
             <span class="code">/&gt;</span>
           </p>
         </a>
-        <a href="https://geniusmuzama.github.io/durag-company.com/" target="_blank" class="project project-tile">
+        <a href="https://st10027393.github.io/durag-company.com/" target="_blank" class="project project-tile">
           <img class="project-image" src="https://i.ibb.co/0f0CBzt/2022-11-14-3.png" alt="project">
           <p class="project-title">
             <span class="code">&lt;</span>
@@ -54,7 +54,7 @@
           </p>
         </a>
       </div>
-      <a href="https://github.com/GeniusMuzama" class="btn btn-show-all" target="_blank">Show all<i class="fas fa-chevron-right"></i></a>
+      <a href="https://github.com/ST10027393" class="btn btn-show-all" target="_blank">Show all<i class="fas fa-chevron-right"></i></a>
       </section>
       <section id="contact" class="contact-section">
       <div class="contact-section-header">
@@ -63,7 +63,7 @@
       </div>
       <div class="contact-links">
         <a href="https://www.facebook.com/tatendaishe.muzama/" target="_blank" class="btn contact-details"><i class="fab fa-facebook-square"></i> Facebook</a>
-        <a id="profile-link" href="https://github.com/GeniusMuzama" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
+        <a id="profile-link" href="https://github.com/ST10027393" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
         <a href="https://codepen.io/Tatendaishe-Muzama" target="_blank" class="btn contact-details"><i class="fab fa-facebook-square"></i> CodePen</a>
         <a href="mailto:gtmuzama@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
         <a href="tel:0644885127" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
